Фикс конвертации url и html в pdf + сбрасывание статусов конвертаций которые находятся в процессинге при запуске джобы